--- a/artist4all_angular/src/app/components/secure/publications/create-publication/create-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/create-publication/create-publication.component.html
@@ -8,6 +8,6 @@
   <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" cols="100" rows="8"></textarea> <br>
   <label for="imgOptional">Imagen(opcional): </label>
   <input type="file" (change)="addImgPublication($event.target.files)" id="imgPublication" multiple/> <br>
-  <button routerLink="/home"> Cancelar </button>
-  <input type="submit" value="Publicar"/>
+  <button type="button" routerLink="/home"> Cancelar </button>
+  <button type="button"> Publicar </button>
 </form>
