--- a/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
@@ -1,1 +1,14 @@
-<p>edit-publication works!</p>
+<app-user-navbar></app-user-navbar>
+<!-- <app-user-sidebar></app-user-sidebar> -->
+<p>Editar publicación:</p>
+
+
+<form #formPublication="ngForm" method="post" (ngSubmit)="editPublication(); formPublication.reset()">
+  <label for="body">Cuerpo:</label> <br>
+  <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" cols="100" rows="8"></textarea> <br>
+  <label for="imgOptional">Imagen(opcional): </label>
+  <input type="file" (change)="addImgPublication($event.target.files)" id="imgPublication" multiple/> <br>
+  <!--TODO: route navigate.back()-->
+  <button type="button" routerLink="/home"> Cancelar </button>
+  <button type="button"> Guardar los cambios </button>
+</form>
