nav bar modified

--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -1,7 +1,7 @@
 <header class="bg-gray-800  shadow-sm lg:static lg:overflow-y-visible">
   <div class="max-w-full mx-auto px-4 sm:px-6 lg:px-8">
     <div class="relative flex justify-between xl:grid xl:grid-cols-12 lg:gap-8">
-      <div class="flex md:absolute mr-4 md:mr-0 md:left-0 md:inset-y-0 lg:static xl:col-span-2">
+      <div class="flex md:absolute md:left-0 md:inset-y-0 lg:static xl:col-span-2">
         <div class="flex-shrink-0 flex items-center">
           <a href="/home">
             <img class="block h-6 md:h-8 w-auto md:ml-4" src="assets/img/logoLight.png" alt="logo">
