Edit de publicación hecho

--- a/artist4all_angular/src/app/components/secure/publications/create-publication/create-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/create-publication/create-publication.component.html
@@ -9,5 +9,5 @@
   <label for="imgOptional">Imagen(opcional): </label>
   <input type="file" (change)="addImgPublication($event.target.files)" id="imgPublication" multiple/> <br>
   <button type="button" routerLink="/home"> Cancelar </button>
-  <button type="button"> Publicar </button>
+  <button type="submit"> Publicar </button>
 </form>
