--- a/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
@@ -10,5 +10,5 @@
   <input type="file" (change)="addImgPublication($event.target.files)" id="imgPublication" multiple/> <br>
   <!--TODO: route navigate.back()-->
   <button type="button" routerLink="/home"> Cancelar </button>
-  <button type="button"> Guardar los cambios </button>
+  <button type="submit"> Guardar los cambios </button>
 </form>
