--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -3,7 +3,7 @@
     <div class="relative flex justify-between xl:grid xl:grid-cols-12 lg:gap-8">
       <div class="flex md:absolute md:left-0 md:inset-y-0 lg:static xl:col-span-2">
         <div class="flex-shrink-0 flex items-center">
-          <a href="/home">
+          <a routerLink="/home">
             <img class="block h-6 md:h-8 w-auto md:ml-4" src="assets/img/logoLight.png" alt="logo">
           </a>
         </div>
