--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -150,7 +150,7 @@
                         <!-- Heroicon name: solid/thumb-up -->
                         <i id="{{ 'notLikedIcon' + i }}" (click)="likePublication(i)" *ngIf="!isLiked; " class="fa fa-heart fa-lg mt-1 text-gray-400 hover:text-gray-500"></i>
                        <!--  TODO: remove style hidden once we know if liked -->
-                       <!-- TODO: revisar -->
+                       <!-- TODO: revisar / comprobar si eres tu o no para dar like -->
                         <i id="{{'likedIcon' + i}}" (click)="removeLikePublication(i)" *ngIf="isLiked;" class="fa fa-heart fa-lg mt-1 text-red-600 hover:text-red-500"></i>
                         <span class="font-medium text-gray-900 ml-1">29</span>
                         <span class="sr-only">likes</span>
