--- a/artist4all_angular/src/app/components/secure/settings/user-settings-account/user-settings-account.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-account/user-settings-account.component.html
@@ -82,7 +82,6 @@
             </aside>
 
             <div id="formAccount" class="divide-y divide-gray-200 lg:col-span-9">
-              <form #formAccount="ngForm" method="POST" (ngSubmit)=" formAccount.reset()">
                <!-- !darte de baja y estas cosas, cambiar email tal vez, perfil visible publicamente, notificaciones, fondo oscuro... -->
                 <!-- Privacy section -->
                 <div class="pt-6 divide-y divide-gray-200">
@@ -94,7 +93,7 @@
                       </p>
                     </div>
                     <ul class="mt-2 divide-y divide-gray-200">
-                      <li class="py-4 flex items-center justify-between">
+                    <!--   <li class="py-4 flex items-center justify-between">
                         <div class="flex flex-col">
                           <p class="text-sm font-medium text-gray-900" id="privacy-option-1-label">
                             Available to hire
@@ -103,30 +102,29 @@
                             Nulla amet tempus sit accumsan. Aliquet turpis sed sit lacinia.
                           </p>
                         </div>
-                        <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
+                       Enabled: "bg-teal-500", Not Enabled: "bg-gray-200"
                         <button type="button" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="true" aria-labelledby="privacy-option-1-label" aria-describedby="privacy-option-1-description">
                           <span class="sr-only">Use setting</span>
-                          <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
+                          Enabled: "translate-x-5", Not Enabled: "translate-x-0"
                           <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
                         </button>
-                      </li>
+                      </li> -->
                       <li class="py-4 flex items-center justify-between">
                         <div class="flex flex-col">
                           <p class="text-sm font-medium text-gray-900" id="privacy-option-2-label">
-                            Make account private
+                            Activar cuenta privada
                           </p>
                           <p class="text-sm text-gray-500" id="privacy-option-2-description">
-                            Pharetra morbi dui mi mattis tellus sollicitudin cursus pharetra.
+                            Una vez activado este modo, sólo los usuarios aceptados podrán ver tus publicaciones
                           </p>
                         </div>
-                        <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
-                        <button type="button" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="false" aria-labelledby="privacy-option-2-label" aria-describedby="privacy-option-2-description">
-                          <span class="sr-only">Use setting</span>
+                        <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" //-->
+                        <button type="button" id="toggleButtonPrivate" (click)="alternatePrivateAccount()" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="false" aria-labelledby="privacy-option-2-label" aria-describedby="privacy-option-2-description">
                           <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-                          <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
+                          <span aria-hidden="true" id="sliderSwitchPrivate" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
                         </button>
                       </li>
-                      <li class="py-4 flex items-center justify-between">
+                     <!--  <li class="py-4 flex items-center justify-between">
                         <div class="flex flex-col">
                           <p class="text-sm font-medium text-gray-900" id="privacy-option-3-label">
                             Allow commenting
@@ -135,10 +133,10 @@
                             Integer amet, nunc hendrerit adipiscing nam. Elementum ame
                           </p>
                         </div>
-                        <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
+                        Enabled: "bg-teal-500", Not Enabled: "bg-gray-200"
                         <button type="button" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="true" aria-labelledby="privacy-option-3-label" aria-describedby="privacy-option-3-description">
                           <span class="sr-only">Use setting</span>
-                          <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
+                          Enabled: "translate-x-5", Not Enabled: "translate-x-0"
                           <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
                         </button>
                       </li>
@@ -151,25 +149,24 @@
                             Adipiscing est venenatis enim molestie commodo eu gravid
                           </p>
                         </div>
-                        <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
+                        Enabled: "bg-teal-500", Not Enabled: "bg-gray-200"
                         <button type="button" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="true" aria-labelledby="privacy-option-4-label" aria-describedby="privacy-option-4-description">
                           <span class="sr-only">Use setting</span>
-                          <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
+                         Enabled: "translate-x-5", Not Enabled: "translate-x-0"
                           <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
                         </button>
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
-                  <div class="mt-4 py-4 px-4 flex justify-end sm:px-6">
+         <!--          <div class="mt-4 py-4 px-4 flex justify-end sm:px-6">
                     <button routerLink="/home" class="bg-white border border-gray-300 rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500">
                       Volver a la home
                     </button>
                     <button type="submit" class="ml-5 bg-blue-500 border border-transparent rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-white hover:bg-light-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500">
                       Guardar los cambios
                     </button>
-                  </div>
+                  </div> -->
                 </div>
-              </form>
             </div>
           </div>
         </div>
