--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -27,23 +27,36 @@
       <div class="hidden lg:flex lg:items-center lg:justify-end xl:col-span-3">
         <div (click)="toggleNotifications();">
         <button href="#" class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
-          <span class="sr-only">View notifications</span>
+          <span class="sr-only">Ver notificaciones</span>
           <!-- Heroicon name: outline/bell -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
           </svg>
         </button>
-        <div id="menuNotifications" class="w-2/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
-          <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
+        <div id="menu-notifications" class="w-3/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
+     <!--      <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
               <img class="h-8 w-8 rounded-full object-cover mx-1"
                   src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
                   alt="avatar">
               <p class="text-gray-600 text-sm mx-2">
-                  <span class="font-bold" href="#">Sara Salah</span> replied on the <span
-                      class="font-bold text-blue-500" href="#">Upload Image</span> artical .
-                  2m
+                  <span class="font-bold" href="#">Sara Salah</span> replied on the
+                  <span class="font-bold text-blue-500" href="#">Upload Image</span> artical . 2m
               </p>
-          </a>
+          </a> -->
+          <div *ngFor="let notification of notifications; index as i;">
+            <div class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
+              <div></div>
+              <img routerLink="/profile/{{ notification.user_responsible.username }}"
+              class="h-8 w-8 rounded-full object-cover mx-1" src="{{ notification.user_responsible.imgAvatar }}" alt="avatar">
+              <p class="text-gray-600 text-sm mx-2">
+                  <a class="font-bold" routerLink="/profile/{{ notification.user_responsible.username }}"> {{ notification.user_responsible.username }} </a>
+                  {{ notification.bodyNotification }}
+                  <span class="font-bold"></span> . {{ notification.notification_date }}
+              </p>
+              <button class=""><i class="fas fa-check text-green inline-block"></i>Aceptar</button>
+              <button class=""><i class="fas fa-times inline-block"></i>Rechazar</button>
+            </div>
+          </div>
           <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
           <img class="h-8 w-8 rounded-full object-cover mx-1"
               src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
@@ -69,25 +82,27 @@
               <span class="font-bold" href="#">Abigail Bennett</span> start following you . 3h
           </p>
       </a>
-  <a href="/dashboard/notifications" id="subMenu" class="block bg-gray-800 text-white text-center font-bold py-2">See all
-      notifications</a>
+      <a href="/dashboard/notifications" id="subMenu" class="block bg-gray-800 text-white text-center font-bold py-2">Ver todas mis notificaciones</a>
+    <!--TODO: Botones para cambiar a leido / Recoger los que leido == 0 -->
+     <!--    TODO: En caso de que sea una solicitud de amistad,  aceptar o declinar (ambas pasan estado leido), si acepta (status_follow: 3 / else : 1) -->
+      <!-- TODO:  Hacer que solo los seguidores puedan ver tus publicaciones -->
       </div>
       </div>
         <ul class="flex items-center">
-          <!--<div class="ml-4">
+          <div class="ml-4 text-white">
              {{ user.name }} {{ user.surname1 }}
-          </div>-->
+          </div>
           <div class="ml-3 relative">
-            <div (click)="isMenuDisplayed()">
+            <div (click)="toggleMenuProfile()">
               <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
                 <span class="sr-only">Open user menu</span>
                 <img class="h-8 w-8 rounded-full" src="{{ user.imgAvatar }}" alt="imgAvatar">
               </button>
             </div>
             <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden z-40" id="menu-toggle" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-              <a routerLink="/profile/my" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
-              <a routerLink="/settings/profile" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
-              <a routerLink="" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
+              <a routerLink="/profile/my" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
+              <a routerLink="/settings/profile" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
+              <a routerLink="" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
             </div>
           </div>
         </ul>
@@ -117,7 +132,7 @@
           <div class="text-sm font-medium text-gray-500">{{ user.email }}</div>
         </div>
         <button type="button" class="ml-auto flex-shrink-0 bg-white rounded-full p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
-          <span class="sr-only">View notifications</span>
+          <span class="sr-only">Ver notificaciones</span>
           <!-- Heroicon name: outline/bell -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
@@ -125,11 +140,9 @@
         </button>
       </div>
       <div class="mt-3 max-w-3xl mx-auto px-2 space-y-1 sm:px-4">
-        <a routerLink="/profile/my" (click)="isMenuDisplayed()" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900" id="menu-toggle" role="menu">Mi perfil</a>
-
-        <a routerLink="/settings/profile" (click)="isMenuDisplayed()" role="menuitem" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Configuración</a>
-
-        <a routerLink="" (click)="isMenuDisplayed()" role="menuitem" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Cerrar sesión</a>
+        <a routerLink="/profile/my" (click)="toggleMenuProfile()" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900" id="menu-toggle" role="menu">Mi perfil</a>
+        <a routerLink="/settings/profile" (click)="toggleMenuProfile()" role="menuitem" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Configuración</a>
+        <a routerLink="" (click)="toggleMenuProfile()" role="menuitem" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Cerrar sesión</a>
       </div>
     </div>
   </nav>
